Bug 1115307 - Search bar alignment fixes and cleanup. r=florian
UltraBlame original commit: 05511d05f1e05d5162062f45b9aea01ea69fd00a

--- a/browser/themes/linux/searchbar.css
+++ b/browser/themes/linux/searchbar.css
@@ -56,6 +56,20 @@ MPL
 .
 *
 /
+#
+PopupSearchAutoComplete
+{
+-
+moz
+-
+margin
+-
+start
+:
+-
+24px
+;
+}
 .
 searchbar
 -
@@ -179,15 +193,6 @@ defaultFavicon
 png
 "
 )
-;
--
-moz
--
-margin
--
-start
-:
-2px
 ;
 }
 .
@@ -459,20 +464,6 @@ align
 :
 center
 ;
-padding
-:
-2px
-3px
-;
--
-moz
--
-padding
--
-end
-:
-2px
-;
 }
 .
 searchbar
@@ -521,11 +512,13 @@ rect
 0
 )
 ;
+-
+moz
+-
 margin
+-
+start
 :
--
-2px
--
 2px
 ;
 }
@@ -1553,7 +1546,7 @@ padding
 -
 start
 :
-6px
+5px
 ;
 width
 :
