--- a/browser/themes/osx/searchbar.css
+++ b/browser/themes/osx/searchbar.css
@@ -56,6 +56,20 @@ MPL
 .
 *
 /
+#
+PopupSearchAutoComplete
+{
+-
+moz
+-
+margin
+-
+start
+:
+-
+23px
+;
+}
 .
 searchbar
 -
@@ -359,24 +373,6 @@ align
 :
 center
 ;
--
-moz
--
-padding
--
-start
-:
-6px
-;
--
-moz
--
-padding
--
-end
-:
-4px
-;
 }
 .
 search
@@ -456,11 +452,23 @@ rect
 0
 )
 ;
-margin
-:
-0
 -
+moz
+-
+margin
+-
+start
+:
 3px
+;
+-
+moz
+-
+margin
+-
+end
+:
+1px
 ;
 }
 .
