--- a/browser/themes/windows/searchbar.css
+++ b/browser/themes/windows/searchbar.css
@@ -56,6 +56,20 @@ MPL
 .
 *
 /
+#
+PopupSearchAutoComplete
+{
+-
+moz
+-
+margin
+-
+start
+:
+-
+25px
+;
+}
 .
 searchbar
 -
@@ -197,15 +211,6 @@ rect
 16px
 0px
 )
-;
--
-moz
--
-margin
--
-start
-:
-2px
 ;
 }
 .
@@ -582,20 +587,6 @@ align
 :
 center
 ;
-padding
-:
-3px
-4px
-;
--
-moz
--
-padding
--
-end
-:
-2px
-;
 }
 .
 searchbar
@@ -645,11 +636,25 @@ rect
 )
 ;
 margin
+-
+top
 :
+1px
+;
+margin
 -
-2px
+bottom
+:
+1px
+;
 -
-2px
+moz
+-
+margin
+-
+start
+:
+4px
 ;
 }
 .
